# ChangeLog for net-misc/openconnect
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openconnect/ChangeLog,v 1.44 2015/04/27 19:01:33 floppym Exp $

  27 Apr 2015; Mike Gilbert <floppym@gentoo.org> -openconnect-5.01.ebuild,
  -openconnect-5.02.ebuild, -openconnect-5.03.ebuild,
  -openconnect-5.99-r1.ebuild, -openconnect-5.99.ebuild,
  -openconnect-7.01.ebuild, -openconnect-7.04.ebuild, -openconnect-7.05.ebuild,
  openconnect-6.00.ebuild, openconnect-7.02.ebuild, openconnect-7.06.ebuild:
  Use krb5 virtual, bug 547556. Remove old.

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> openconnect-4.08.ebuild,
  openconnect-5.01.ebuild, openconnect-5.02.ebuild, openconnect-5.03.ebuild,
  openconnect-5.99-r1.ebuild, openconnect-5.99.ebuild, openconnect-6.00.ebuild,
  openconnect-7.01.ebuild, openconnect-7.02.ebuild, openconnect-7.04.ebuild,
  openconnect-7.05.ebuild, openconnect-7.06.ebuild:
  Drop old Python implementations

  03 Apr 2015; Markus Meier <maekke@gentoo.org> openconnect-7.02.ebuild:
  arm stable, bug #542444

*openconnect-7.06 (22 Mar 2015)

  22 Mar 2015; Mike Gilbert <floppym@gentoo.org> +openconnect-7.06.ebuild:
  Version bump.

  13 Mar 2015; Mike Gilbert <floppym@gentoo.org> openconnect-7.05.ebuild:
  Fix category for openresolv.

*openconnect-7.05 (12 Mar 2015)

  12 Mar 2015; Mike Gilbert <floppym@gentoo.org> +openconnect-7.05.ebuild:
  Version bump, bug 542874. Use readme.gentoo for postinst messaging. Add
  message about openresolv, bug 539012.

*openconnect-7.04 (11 Mar 2015)

  11 Mar 2015; Mike Gilbert <floppym@gentoo.org> +openconnect-7.04.ebuild:
  Version bump. Use java-pkg-opt-2.eclass for java support.

  10 Mar 2015; Yixun Lan <dlan@gentoo.org> openconnect-7.02.ebuild:
  keyword for arm/arm64, test on cortex-a9 and a53 board

  06 Jan 2015; Mike Gilbert <floppym@gentoo.org> openconnect-7.02.ebuild:
  Use tarball for vpnc-scripts.

*openconnect-7.02 (20 Dec 2014)
