@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst preinst prepare setup
+DEPEND=dev-libs/libxml2 sys-libs/zlib !gnutls? ( >=dev-libs/openssl-1.0.1h:0[static-libs?] ) gnutls? ( >=net-libs/gnutls-3[static-libs?] dev-libs/nettle app-misc/ca-certificates ) gssapi? ( virtual/krb5 ) libproxy? ( net-libs/libproxy ) nls? ( virtual/libintl ) virtual/pkgconfig doc? ( || ( >=dev-lang/python-2.7.5-r2:2.7[xml] ) sys-apps/groff ) java? ( >=virtual/jdk-1.6 ) nls? ( sys-devel/gettext ) java? ( >=dev-java/java-config-2.2.0 )
+DESCRIPTION=Free client for Cisco AnyConnect SSL VPN software
+EAPI=5
+HOMEPAGE=http://www.infradead.org/openconnect.html
+IUSE=doc +gnutls gssapi java libproxy nls static-libs linguas_ar linguas_cs linguas_de linguas_el linguas_en_GB linguas_en_US linguas_es linguas_eu linguas_fi linguas_fr linguas_gl linguas_id linguas_lt linguas_nl linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_sk linguas_sl linguas_tg linguas_ug linguas_uk linguas_zh_CN linguas_zh_TW elibc_FreeBSD java
+KEYWORDS=~amd64 ~arm ~arm64 ~ppc64 ~x86
+LICENSE=LGPL-2.1 GPL-2
+RDEPEND=dev-libs/libxml2 sys-libs/zlib !gnutls? ( >=dev-libs/openssl-1.0.1h:0[static-libs?] ) gnutls? ( >=net-libs/gnutls-3[static-libs?] dev-libs/nettle app-misc/ca-certificates ) gssapi? ( virtual/krb5 ) libproxy? ( net-libs/libproxy ) nls? ( virtual/libintl ) sys-apps/iproute2 !<sys-apps/openrc-0.13 java? ( >=dev-java/java-config-2.2.0 )
+SLOT=0/5
+SRC_URI=ftp://ftp.infradead.org/pub/openconnect/openconnect-7.06.tar.gz ftp://ftp.infradead.org/pub/vpnc-scripts/vpnc-scripts-20140806.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	f7dce580d4098b526be3fa17d4242820	linux-info	25e9476cdec14dfb0af32f4c83c3f297	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=c9324d780e08d63d323940014d384da7
