@@ -3,9 +3,9 @@ Hash: SHA256
 
 AUX openconnect.conf.in 941 SHA256 d0fbfb0c93591415d93096310caff8550de06faf94c72dd52d9a8654a3c451aa SHA512 a689df7141621c80bca77fdd1e01397b98882c7fd8db79b2fe1495916656522234e3af739538002533c003e4243e9af4bf80cd73bae961e15568997ce89ef6d5 WHIRLPOOL 36caee584cad889a9f746046c9d41de755a27260e46b8886149343224452b07240bad770b0040ad7998043eefed847873cd580645bda83280901d069692384bd
 AUX openconnect.init.in 2869 SHA256 a7674216e6140559db9306efe7d9e0cb8fe4f094c04c0c5b33dc50ac4d99ac9a SHA512 233d70713380229483445b91ede0a66ef74bcf1c0177fbb36782aaec2fd3d90029743cee7230b5ec856a42da3d33303a3057578766600fda463d3d0d63f7f370 WHIRLPOOL ede17b6c1caa1c4c2094d8b124066ca6088336ac64fc0b6eeb45da61bd7a5a55bd3eb52b268bb4b285fedda8f759afdfb904ce4a7976c13f2c9d8eed52b27984
-AUX openconnect.init.in-r1 3066 SHA256 2a4b783fcb30e2a413aad0ae1d3f6de8764c940b6039628b8608625823615e18 SHA512 0b78b8c01a2c1a165d4d308175d19d3cc7cd45612bd329c0e98f9d5d328689c36bdc20108bbd9f65fdc520396ca63503ff120266d8278600df10bcb48b36577f WHIRLPOOL 310bdbff90ca9f392728faf6731ddd440689b41481567d0a92ce55dc26de04f52b894cdabc5f9c5f2a99749fb33919daa6edb77fd91b5af4e68b5e01b7f80e0e
 AUX openconnect.init.in-r2 3270 SHA256 c5db95fe3197f0f9f27edef7f51515c54d996c6c984a9938ce7bbeb3f7b54c64 SHA512 99462b8954c1e6a78f0993922210cab6d41a7211321484c36c14eb24ad8b1e509602ccdebcdbbfb85fb953017883c0a86e597182b53a61e0be8836261d30bf01 WHIRLPOOL 942c06776fd9b22acb88d9a7de6e96e55a666eab4f784b2c3cd922480de91d175664267cb0f5e78e750e412bffa0d07e560409bf993dc755008f5078c0f13142
 AUX openconnect.init.in-r3 3295 SHA256 3e667d5459dc4399421e4c2ac16a59276595c65426266e8175da3061352a199e SHA512 a3f8e4d817254bcf43788d17e07905dee5ca36b9a19064e53ebbffd01cf364bd481932ab40e3e7f089dc1c598934543c57a0c968fc23565acc2902f38a06f6c4 WHIRLPOOL 4b30d820b6b9447235de449dccfc7ae8fd96f394312b0ccfe8c3869993c7339ff4113542a38052cbb73758d4661f4f4e91ac63f96ee046dbc465362336866d48
+AUX openconnect.init.in-r4 1901 SHA256 1ef38a939a14976bbd8556b885f6cf279628d3700d6288aeef6ba0ff11399dbb SHA512 1608f5d90d5632e1d0915ed43c2b4d84a1926adabfbffbf1a0b65b8e0411b1355da679aad9dbd6322e9a3df041cb130c86699f1164d0ad6c895f3f6ceba778d5 WHIRLPOOL 97a0e69523b9d279b983910ee2dcbb4fcb5f07766f8b6ce40054cd735e96d3333ca6275480db0c4ea08178dab2f28264633e58045b2b71ae57e9293d4aedf984
 AUX openconnect.logrotate 116 SHA256 19cca62003efb050832c05cbca5a5e9057b18cf28d1c3a445c2c6fe1cf7022a2 SHA512 ea1b6caf6278fea515c299072ee799ab3676014784703d7fa8e4f4d7bfc4599650c386d9706a3e6d92c195c9e5e1628fa6efc1124e1ae72875cc9eaab73cb077 WHIRLPOOL 7116069442a23d369913d455d7131b2d1b3884d378da6d6aa1da357bd2fb7057f9d84fd253da608be35252573052fb02c9cddab1a88516611c5e010324194064
 DIST openconnect-4.08.tar.gz 1214464 SHA256 114eef2b5a8087f26c7871db8700a293101e9626fc94fbef54ac6daef6ce1a77 SHA512 0731a2bb85f1f98c232a73c03962d8854e58b9aa9687a1521ed142e3aadbd9ba76e760a6fbc9fe3d61d5236fcb82af21aba0c50cb27b4c1a5b7f82f9bb9836a0 WHIRLPOOL fd4a52ceb804e2ef77939dcf8b111cf7dacf956dee6a1421b436b595961a14c038f3cf4bc3bb67e91b20a5b5a8473e27123d403c369864a78130ee9f5cd552ff
 DIST openconnect-6.00.tar.gz 1021981 SHA256 8a0c684dccac2447d204d544f6f466e41b21bce71e033ba58e2cb17b795ab81c SHA512 98c39fdbf6931bc20521de107752ffad1cd99381f4a221cc6ab3f43b6a779f5259ed082e05044c25d61bd32f7f3ade28adfdc3bc2535c2e6acb27375a9591e0c WHIRLPOOL dd3a037def1c192bb9c203b6a97185164f0a5f9ff224f64ab0b36482bd45d57ed4b83a79ac71186d93a29a6d4417c8fe0edd7fd08adf6df1f69f59cc807b6f2f
@@ -17,13 +17,14 @@ DIST vpnc-scripts-20140806.tar.gz 20070 SHA256 1f61a6c5ec8a2dab7d5f12c9b438d931e
 EBUILD openconnect-4.08.ebuild 4640 SHA256 82bb65be696e095e58718e3d71db3465bf4d4e3c008e16d3a9f434970d16eb96 SHA512 f7594aac69feace09acb775db59a84ac56f986a0f9d673e43fc44b8e242a1a05bbb9846cd8d2789b0ca006a86c0f100cf8008c6cdcf112858caa9b23afad1479 WHIRLPOOL 8576648f4ec5f8aebe1593e9b8fd6f170ed4ae700aa642fb557e051cc5d8f340ad8dbf7d00de8628dd73dec071739886dd406ec2dc5f7bfa96d4cbea04d9b9af
 EBUILD openconnect-6.00.ebuild 4663 SHA256 59e425996c1fb2546aea51899dbf908d5e0269ca14a271b7fe1dd9517a60f1db SHA512 e62fbee7c1fcc562b98fc86e6ca7676763541744c643f9a7b3e389a4490ae9f56da73d8f6df49d1f0c8072b16e134373ee8cd66245905dd6659381720a8ae0bf WHIRLPOOL 3a9e85eb5b68db6e7c46338296d5b1664787ffaf6b18e788045d14442a89097fa98edd26c1864d188d75e1513e9886fd41dc503cfef31c2a8c8d936b3ba1dbdf
 EBUILD openconnect-7.02.ebuild 4367 SHA256 fd80d9e8bb78909f062228029ed79a7ff97c321b27b23c5277ef033a012e9040 SHA512 47215d2e4b5ee662aff6b3dcea47064e2c77daf34f57f8691d30b204b906551d0fed0823093936b74a7b4b176620919e1cd48435e2592f28c3cf7afc30529ef4 WHIRLPOOL 192fd38dfd08929dea0de8728cfc007af88e4f6dbb8d38fee24d11becab9ac52606659ad70d804418fe6231df42e859e3259437b23460988c68e9eff70b48468
+EBUILD openconnect-7.06-r1.ebuild 4399 SHA256 4528e565688a8da98439b90624adb4ceff213ca930ac9cdd6d034a0da8a65a0f SHA512 cbe35c149473cb54c6f14944a1252bdd9a4ad032b3cf423ca83aa93758d62bb1a553a92359686a3c5968ec2c381d5b54f0aea2fd1c919e38adcb3602319fa211 WHIRLPOOL 802969088f76a03bc03d2bdcfe41dc0ca2fa3c367534aa794f06e519578b2d41b2d8bf6f1070e337e99d8bb467da61a4e3cf47a9c4daab9fc77a4529bf2bb5c4
 EBUILD openconnect-7.06.ebuild 4372 SHA256 5997d43d1957a2b6ae3d2c63b9ee3be0bcc48ebf2a205d0ef8f20732336e2604 SHA512 e7dc6587655bf8a1a1cf5c9c4a0b83cd41b60f923ded01c2e80d5aaa182593ac857d783f63c188b4a219332bca0ca16fe9594bb1be90a4d9f09665e3e1f4b571 WHIRLPOOL 308fc2eb10084a033ab2c646119b9b67c14577c22c52a8d0ed9d0172b8269d2b0c7b4b9d43d2d1edf6e7791fb9e08813c46e38168bef6555c28d10f4678c1004
-MISC ChangeLog 7462 SHA256 ba818560068b3c58c083065b31d5b4ef9e45aa3ca22333bd52447af725d83deb SHA512 3e65c8e7d7e7f38f8260aa9fe1f077a5ae72c37d7a5c790705c322a7c14697f7bb56b836de65e6f7050c95830c5327624f8a842e017be59dfb7874e726804a51 WHIRLPOOL d7d1660f5a6d2673aeeadbd17ba00c1176b3e6c076e9b2377d4f353063b544b7ed397465b6a67b2c6f887face333096444a659e25ff474b3f10759de44c30983
+MISC ChangeLog 7690 SHA256 181c00063c14b2384e61cfde398d53352725cbbca4762c65aef3430fbae673b5 SHA512 90ddae94fcf11c9ce58006827a624f4d42047e71ffe25397513dfe41ac932bfee863dc292377b3a7e1e5f4903a72b7a0705ffe5ddc2bdf478d73674efcbd5488 WHIRLPOOL e546073c1644599ac8e1f2c9e17be0ca0f0852b6c03918e1eba4a592f16f055e14142f2d8287311b7fb942e403a2d20e1c9edc3eb800c94b14476cc9524cc2de
 MISC metadata.xml 606 SHA256 c62dfd9f1996b2318f603d0d66b31cbe034773873d844dd344c86fecbf1f22f4 SHA512 2ebe6f9936c7dd7762874f9f8a5c5b9c206bb9af806990af5c9a85fdc1911a6078a7d6be73afbe6e018f777c61caeace9c0aa6710f1ab90446ae8609cdb6285a WHIRLPOOL fe571cb438ebe0e881b791e66acffccac15aba941d90694c751df6550b53bb986a17adfafbf6129123cf5ecde7a50ad4ea8f9f87622b12cd40c8462b79a32cdc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlU+h44ACgkQC77qH+pIQ6RTrgD/dm4nh6oqLUR6Ke6Bk07VNBSl
-vV135LxqpN2dSL2soiYBAIxSNCxPB8zXFjIjiK6JYFDmoEYwoMV7hJdnJTOV5lgx
-=8iWk
+iF4EAREIAAYFAlVRUywACgkQC77qH+pIQ6TjCAEArj3IzWRn34mfjWI/K96GR7GQ
+XbpGbqp+TZQJUnYfvuAA/ivl8Lx6hEFloYp3xsZ7WRzM1DWakN1aM1srRMrFToGP
+=xeH9
 -----END PGP SIGNATURE-----
